WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220211
JSFunction::deleteProperty() fails to delete a non-existent "prototype" property
https://bugs.webkit.org/show_bug.cgi?id=220211
Summary
JSFunction::deleteProperty() fails to delete a non-existent "prototype" property
Alexey Shvayka
Reported
2020-12-31 09:19:57 PST
JSFunction::deleteProperty() fails to delete a non-existent "prototype" property
Attachments
Patch
(5.75 KB, patch)
2020-12-31 09:21 PST
,
Alexey Shvayka
ysuzuki
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Shvayka
Comment 1
2020-12-31 09:21:47 PST
Created
attachment 416867
[details]
Patch
Yusuke Suzuki
Comment 2
2020-12-31 13:07:44 PST
Comment on
attachment 416867
[details]
Patch r=me
Alexey Shvayka
Comment 3
2020-12-31 19:38:44 PST
Committed
r271117
: <
https://trac.webkit.org/changeset/271117
>
Radar WebKit Bug Importer
Comment 4
2020-12-31 19:39:15 PST
<
rdar://problem/72760671
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug