JSFunction::deleteProperty() fails to delete a non-existent "prototype" property https://bugs.webkit.org/show_bug.cgi?id=220211

Reviewed by Yusuke Suzuki.

JSTests:

* stress/function-delete-prototype.js: Added.

Source/JavaScriptCore:

This patch replaces arrow function check with hasPrototypeProperty() since there
are more functions without a "prototype" (accessors, methods, async functions),
aligning JSC with the spec, V8, and SpiderMonkey.

hasPrototypeProperty() is already used by JSFunction::getOwnPropertySlot().

* runtime/JSFunction.cpp:
(JSC::JSFunction::deleteProperty):


Canonical link: https://commits.webkit.org/232714@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271117 268f45cc-cd09-0410-ab3c-d52691b4dbfc